# sagnir

./: .containerignore  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  README.md  ROADMAP.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
containers/: Containerfile.cli
crates/sagad/: Cargo.toml
crates/sagad/src/: main.rs
crates/sagnir/: Cargo.toml
crates/sagnir-change/: Cargo.toml
crates/sagnir-change/src/: lib.rs
crates/sagnir-cli/: Cargo.toml
crates/sagnir-cli/src/: init.rs  lib.rs  main.rs
crates/sagnir-cli/src/init/: metadata.rs  secure_store.rs  tests.rs
crates/sagnir-cli/src/init/metadata/: tests.rs
crates/sagnir-cli/src/init/secure_store/: portable.rs  unix.rs
crates/sagnir-cli/src/init/tests/: security_paths.rs
crates/sagnir-codec/: Cargo.toml
crates/sagnir-codec/src/: lib.rs  scalar.rs
crates/sagnir-core/: Cargo.toml
crates/sagnir-core/src/: error.rs  id.rs  lib.rs  name.rs
crates/sagnir-crypto/: Cargo.toml
crates/sagnir-crypto/src/: lib.rs
crates/sagnir-fact/: Cargo.toml
crates/sagnir-fact/src/: lib.rs
crates/sagnir-object/: Cargo.toml
crates/sagnir-object/src/: graph.rs  header.rs  identity.rs  lib.rs
crates/sagnir-object/src/graph/: tests.rs
crates/sagnir-object/src/identity/: tests.rs
crates/sagnir-policy/: Cargo.toml
crates/sagnir-policy/src/: lib.rs
crates/sagnir-proof/: Cargo.toml
crates/sagnir-proof/src/: lib.rs
crates/sagnir-store/: Cargo.toml
crates/sagnir-store/src/: config.rs  lib.rs  metadata.rs  realm.rs
crates/sagnir-store/src/config/: tests.rs
crates/sagnir-sync/: Cargo.toml
crates/sagnir-sync/src/: lib.rs
crates/sagnir-worktree/: Cargo.toml
crates/sagnir-worktree/src/: lib.rs
crates/sagnir-world/: Cargo.toml
crates/sagnir-world/src/: lib.rs
crates/sagnir/src/: lib.rs
docs/: IMPLEMENTATION_PLAN.md  VERSION_PLAN.md  architecture.md  causal-memory.md  command-design.md  container-image-policy.md  hash-migration-plan.md  local-store.md  modularity-policy.md  object-format.md  proof-model.md  protocol.md  release-runbook.md  security-controls.md  signature-policy.md  supply-chain-security.md  threat-model.md  toolchain-policy.md  unsafe-policy.md  vault-encryption.md  world-model.md
fuzz/: Cargo.toml  README.md  deny.toml
fuzz/fuzz_targets/: bounded_name_parse.rs  codec_byte_string_read.rs  object_graph_path.rs  object_graph_verify.rs  object_header_parse.rs  object_id_parse.rs  worktree_path_classify.rs
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md
scripts/: check_doc_links.sh  check_latest_crates.sh  checks.sh  generate-sbom.sh  install_security_tools.sh  podman_smoke.sh  release_0_10_gate.sh  release_0_1_gate.sh  release_0_2_gate.sh  release_0_3_gate.sh  release_0_4_gate.sh  release_0_5_gate.sh  release_0_6_gate.sh  release_0_7_gate.sh  release_0_8_gate.sh  release_0_9_gate.sh  security_tool_gate.sh  validate-modularity-policy.sh  validate-pentest-pass.sh  validate-pentest-report.sh  validate-release-metadata.sh  validate-release-notes.sh  validate-security-policy.sh
security/pentest/: README.md  v0.1.0.md  v0.10.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
