[workspace]
resolver = "3"
members = [
    "crates/sagnir-core",
    "crates/sagnir-codec",
    "crates/sagnir-object",
    "crates/sagnir-store",
    "crates/sagnir-worktree",
    "crates/sagnir-change",
    "crates/sagnir-world",
    "crates/sagnir-fact",
    "crates/sagnir-policy",
    "crates/sagnir-crypto",
    "crates/sagnir-proof",
    "crates/sagnir-sync",
    "crates/sagnir-cli",
    "crates/sagnir",
    "crates/sagad",
    "tools/xtask",
]

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.97.1"
license = "EUPL-1.2"
repository = "https://github.com/sagnir/sagnir"
homepage = "https://github.com/sagnir/sagnir"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
overflow-checks = true
