[package]
name = "sagnir-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

# This standalone workspace keeps cargo-fuzz/nightly plumbing outside the
# stable root workspace. Its dependency tree is still checked manually with:
# cargo deny --manifest-path fuzz/Cargo.toml check --config fuzz/deny.toml
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sagnir-object = { path = "../crates/sagnir-object", version = "0.1.0" }

[[bin]]
name = "object_header_parse"
path = "fuzz_targets/object_header_parse.rs"
test = false
doc = false
bench = false
