[package]
name = "sagnir-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

# This standalone workspace keeps cargo-fuzz/nightly plumbing outside the
# stable root workspace. Its dependency tree is still checked manually with:
# cargo deny --manifest-path fuzz/Cargo.toml --config fuzz/deny.toml check
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.13"
sagnir-codec = { path = "../crates/sagnir-codec", version = "0.10.0" }
sagnir-core = { path = "../crates/sagnir-core", version = "0.10.0" }
sagnir-object = { path = "../crates/sagnir-object", version = "0.10.0" }
sagnir-worktree = { path = "../crates/sagnir-worktree", version = "0.10.0" }

[[bin]]
name = "object_header_parse"
path = "fuzz_targets/object_header_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "object_id_parse"
path = "fuzz_targets/object_id_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bounded_name_parse"
path = "fuzz_targets/bounded_name_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "worktree_path_classify"
path = "fuzz_targets/worktree_path_classify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "codec_byte_string_read"
path = "fuzz_targets/codec_byte_string_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "object_graph_verify"
path = "fuzz_targets/object_graph_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "object_graph_path"
path = "fuzz_targets/object_graph_path.rs"
test = false
doc = false
bench = false
