[package]
name = "sagnir-change"
description = "Sagnir change and sealed revision metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-core = { path = "../sagnir-core", version = "0.9.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
