[package]
name = "sagnir-cli"
description = "saga command-line interface for Sagnir."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir = { path = "../sagnir", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "saga"
path = "src/main.rs"

[lints]
workspace = true
