[package]
name = "sagnir-cli"
description = "saga command-line interface for Sagnir."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
getrandom = { version = "0.4.3", default-features = false }
sagnir = { path = "../sagnir", version = "0.10.0" }

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "saga"
path = "src/main.rs"

[lints]
workspace = true
