[package]
name = "sagnir-codec"
description = "Canonical Sagnir encoding primitives."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-core = { path = "../sagnir-core", version = "0.10.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
