[package]
name = "sagnir-object"
description = "Sagnir object identities and object metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-codec = { path = "../sagnir-codec", version = "0.1.0" }
sagnir-core = { path = "../sagnir-core", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
