[package]
name = "sagnir-proof"
description = "Sagnir proof status and verification report metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-core = { path = "../sagnir-core", version = "0.1.0" }
sagnir-policy = { path = "../sagnir-policy", version = "0.1.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
