[package]
name = "sagnir-worktree"
description = "Sagnir worktree path and materialization rules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-core = { path = "../sagnir-core", version = "0.9.0" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
