[package]
name = "sagnir-world"
description = "Sagnir world metadata and promotion preflight types."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sagnir-core = { path = "../sagnir-core" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
